--- a/serverfiles/package.json
+++ b/serverfiles/package.json
@@ -19,7 +19,7 @@
     "express-session": "^1.15.6",
     "express-session-fixation": "^1.0.1",
     "multer": "^1.3.0",
-    "pug": "^2.0.0-rc.4",
-    "sqlite3": "^3.1.13"
+    "pug": "^3.0.2",
+    "sqlite3": "^5.0.2"
   }
 }
